[package]
name = "ridiculous_bevy_hot_reloading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
## Prefix lib name with "lib_"
name = "dyn_ridiculous_bevy_hot_reloading" 
path = "../src/lib.rs"
crate-type = ["dylib"]

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
libloading = "0.7" 
hot_reload_lib = { version = "*", path = "../macro" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 3