[workspace]
resolver = "2"

[package]
name = "hot_reload_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_hot_reload_bevy" 
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { version = "0.9" }
libloading = "0.7" 

# use "bypass" feature to bypass all hot macros
ridiculous_bevy_hot_reloading = { version = "*", path = "../..", features = [] } 

[build-dependencies]
anyhow = "1.0"
cargo_toml = "0.13"
toml = "0.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 3